<resources>
    <string name="app_name">Athene</string>

    <string name="sp_persistence">sharedPreferencesPersistence</string>

    <!-- Dialog String -->
    <string name="no_internet_error">
        Вероятно, у вас отсутствует интернет-соединение.
        Попробуйте вернуться позднее.
    </string>

    <string name="settings">Настройки</string>
    <string name="end_of_words">Слов больше нет</string>
    <string name="words">Слова</string>
    <string name="action_settings">Настройки</string>
    <string name="loading">Загрузка…</string>
    <string name="submit">Проверить</string>

    <!-- Registration -->
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="enter">Войти</string>
    <string name="registration">Регистрация</string>

    <!-- Activity names-->
    <string name="auth">Вход</string>
    <string name="title_activity_main">Слова</string>
    <string name="tutorial">Обучение</string>
    <string name="enter_act">Вход</string>
    <string name="do_you_want_to_sign_out">Выйти?</string>
    <string name="archive">Выученные слова</string>
    <string name="new_word">Новое слово</string>
    <string name="yes">Да</string>
    <string name="repeat">Повторите пароль</string>
    <string name="_continue">Продолжить</string>
    <string name="log_out">Выйти</string>
    <string name="reg">Регистрация</string>
    <string name="incorrect">Неправильно, на самом деле:</string>
    <string name="changeWord"><u>Изменить</u></string>


    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
            based on your message history
        </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>

    <!-- Example settings for Data & Sync -->
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="next">Дальше→</string>
    <string name="main_word_edittext_placeholder">Введите слово</string>

    <!-- Example settings for Notifications -->
    <string name="main_add_word">Добавить</string>
    <string name="main_navigation_item_first">Добавить слово</string>
    <string name="main_navigation_item_second">Кладбище</string>
    <string name="serviceFeedbackKey">SERVICE</string>
    <string name="sendWordToSreviceTag">SENDSERVICE</string>
    <string name="service_saved_indexes_key">service_to_word_check_fragment_key</string>
    <string name="from_russian_to_english_task">Переведите с русского на английский</string>
    <string name="from_english_to_russian_task">Переведите с английского на русский</string>

    <!-- Main -->
    <string name="continue_repeating_words">Продолжить</string>
    <string name="finish_repeating_words">Закончить</string>
    <string name="user_words_check_label">Проверить слова</string>
    <string name="words_check_stage">stage</string>
    <string name="words_check_category_name">category</string>

    <!-- Tasks -->
    <string name="word_check_flag">flag</string>
    <string name="parcelableWordKey">parcelableWord</string>
    <string name="login">Войти</string>
    <string name="checkingWord">Проверить слова</string>
    <string name="checkingWordHint">Перевод</string>
    <string name="userAnswer">Ваш ответ:</string>
    <string name="search">Поиск</string>
    <string name="hourOfDay">hourOfDay</string>
    <string name="minute">minutes</string>
    <string name="firstRun">firstRun</string>
    <string name="defaultCategory">defaultCategory</string>
    <string name="checkWord">Проверить</string>
    <string name="addWord">Добавить слово</string>
    <string name="saveChanges">Сохранить</string>
    <string name="deleteWord">Удалить</string>
    <string name="deleteWordMessage">Вы уверены, что хотите удалить слово</string>
    <string name="repeatPassword">Повторите пароль</string>
    <string name="createAccount">Создайте аккаунт Athene</string>
    <string name="enterAccount">Вход в аккаунт Athene</string>
    <string name="lettsGo">Вперед!</string>
    <string name="or">или</string>
    <string name="googleSignUp">Или войти через Google</string>
    <string name="undefinedError">Произошла неизвестная ошибка</string>
    <string name="isCategoryTheSame">Такая категория уже существует у вас, новые слова пополнили её!</string>
    <string name="newWords">Новые категория добавлена!</string>
    <string name="category">Категория</string>
    <string name="addNewCategory">Добавить категорию</string>
    <string name="archivedWordsSharedPreferences">archive</string>
    <string name="learnWords">Изучить</string>
    <string name="shareCategory">Поделиться</string>
    <string name="thisCategoryIsEmpty">Данная категория пуста</string>
    <string name="add_word_from_categoty">Вы уверены, что хотите добавить это слово в цикл изучения?</string>
    <string name="no">Нет</string>
    <string name="changingWord">changingWord</string>
    <string name="wordsToCheckingKey">key701</string>
    <string name="forgotWord">Не помню</string>
    <string name="categoriesToChangeWordActivity">categories</string>
    <string name="categoriesKey">categoriesKey</string>
    <string name="thereIsNoLearntWords">Пока что выученных слов нету</string>
    <string name="categories">Категории</string>
    <string name="thereIsNoCategories">Пока что у вас нету своих категорий</string>
    <string name="removeWordKey">removing word</string>
    <string name="konfetti">Konfetti</string>
    <string name="konfettiKey">konfettiKey</string>
    <string name="cancel">Отмена</string>
    <string name="exit_from_account_message">Вы уверены, что хотите выйти из аккаунта?</string>
    <string name="deleteCategoryMessage">Вы действительно хотите удалить данную категорию?</string>
    <string name="understanding">Понятно!</string>
    <string name="tutorial_key">tutorial</string>
    <string name="remember_word">Вспомнить слово</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
</resources>

