<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/progress_bar"
    tools:context="com.develop.vadim.english.Basic.AuthenticationActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="259dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.44">

        <EditText
            android:textColor="@color/colorWhite"
            android:textColorHighlight="@color/colorWhite"
            android:textColorLink="@color/colorWhite"
            android:id="@+id/emailEditView"
            android:textColorHint="@color/WHITE_TRANSPARENT"
            android:backgroundTint="@color/colorWhite"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:backgroundTint="@color/colorWhite"
            android:hint="@string/password"
            android:textColorHint="@color/WHITE_TRANSPARENT"
            android:textColor="@color/colorWhite"
            android:textColorHighlight="@color/colorWhite"
            android:textColorLink="@color/colorWhite"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/confrimEditText"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/repeatPassword"
            android:backgroundTint="@color/colorWhite"
            android:textColorHint="@color/WHITE_TRANSPARENT"
            android:textColor="@color/colorWhite"
            android:textColorHighlight="@color/colorWhite"
            android:textColorLink="@color/colorWhite"
            android:inputType="textPassword">
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="257dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/registrationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/WHITE_TRANSPARENT"
                android:text="@string/registration" />

            <TextView
                android:id="@+id/loginTextView"
                android:textColor="@color/colorWhite"
                android:layout_width="wrap_content"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/enter"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textColor="@color/colorWhite"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:textSize="14sp"/>

        <com.shobhitpuri.custombuttons.GoogleSignInButton
            android:id="@+id/signInWithGoogleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/googleSignUp"
            app:isDarkTheme="false" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.76">

        <ImageView
            android:id="@+id/registerImageView"
            android:layout_width="170dp"
            android:layout_height="40dp"
            android:background="@drawable/continue_button_background"
            android:src="@drawable/arrow_small" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/lettsGo"
            android:textColor="@color/WHITE_TRANSPARENT"
            android:textSize="14sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:textSize="32sp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/createAccount" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/WHITE_TRANSPARENT"
            android:textSize="20sp"
            android:text="@string/enterAccount"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
