<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#252525"
    android:padding="@dimen/main_content_padding">

    <TextView
        android:id="@+id/main_title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/roboto"
        android:text="@string/app_name"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/main_title_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/main_word_first_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorWhite"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:hint="@string/main_word_edittext_placeholder"
            android:inputType="textPersonName"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:textSize="@dimen/main_word_edittext_text_size" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_space_first_height" />

        <EditText
            android:id="@+id/main_word_second_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorWhite"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:hint="@string/main_word_edittext_placeholder"
            android:inputType="textPersonName"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:textSize="@dimen/main_word_edittext_text_size" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_space_second_height" />

        <Button
            android:id="@+id/main_add_word_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bordered_transparent_rectangle"
            android:fontFamily="@font/roboto"
            android:padding="@dimen/main_add_word_button_padding"
            android:text="@string/main_add_word"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:background="@drawable/bordered_transparent_rectangle"
        android:orientation="horizontal"
        android:paddingStart="@dimen/main_navigation_padding_side"
        android:paddingTop="@dimen/main_navigation_padding_top_and_bottom"
        android:paddingEnd="@dimen/main_navigation_padding_side"
        android:paddingBottom="@dimen/main_navigation_padding_top_and_bottom">

        <TextView
            android:id="@+id/main_navigation_item_first_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginEnd="@dimen/main_navigation_item_margin"
            android:layout_weight="1"
            android:fontFamily="@font/roboto"
            android:text="@string/main_navigation_item_first"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/main_navigation_item_text_size" />

        <TextView
            android:id="@+id/main_navigation_item_second_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="@dimen/main_navigation_item_margin"
            android:layout_weight="1"
            android:fontFamily="@font/roboto"
            android:text="@string/main_navigation_item_second"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/main_navigation_item_text_size" />
    </LinearLayout>

</FrameLayout>