<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="0dp"
    app:cardBackgroundColor="@color/purple"
    app:contentPadding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addNewCategory"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/add_category_title_text_size"
            android:gravity="center_horizontal"
            android:textColor="@color/colorWhite"/>

        <EditText
            android:id="@+id/addNewCategoryEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:hint="@string/category"
            android:textSize="@dimen/add_category_input_text_size"
            android:layout_gravity="center_horizontal"
            android:textColorHint="@color/WHITE_TRANSPARENT"
            android:backgroundTint="@color/colorWhite"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:id="@+id/addNewCategoryImageView"
                android:layout_width="@dimen/add_category_save_image_view_size"
                android:layout_height="@dimen/add_category_save_image_view_size"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_arrow_small_white"
                android:background="@drawable/continue_button_background"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/WHITE_TRANSPARENT"
                android:textSize="@dimen/add_category_secondary_text_text_size"
                android:text="@string/_continue"/>

        </LinearLayout>


    </LinearLayout>

</com.google.android.material.card.MaterialCardView>